--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,16 +1,9 @@
 version: 2.1
 
-orbs:
-  slack: circleci/slack@4.9.3
 
 
-commands:
-  notify_on_failure:
-    steps:
-      -slack/notify:
-        event: fail
-        channel: cicd_pipeline
-        template: basic_fail_1 
+
+# commands:
 
 #   destroy-environment:
 #     description: Destroy back-end and front-end cloudformation stacks given a workflow ID.
@@ -60,7 +53,7 @@ jobs:
       - save_cache:
           paths: [frontend/node_modules]
           key: frontend-deps
-
+      
 
   build-backend:
     docker:
@@ -78,7 +71,7 @@ jobs:
       - save_cache:
           paths: [backend/node_modules]
           key: backend-deps
-      -notify_on_failure
+     
   test-frontend:
     docker:
       - image: cimg/node:13.8.0
@@ -92,8 +85,7 @@ jobs:
              cd frontend
              npm install
              npm test
-      -notify_on_failure
-                
+             
   test-backend:
     docker:
       - image: cimg/node:13.8.0
@@ -107,7 +99,7 @@ jobs:
              cd backend
              npm install
              npm test
-      -notify_on_failure
+      
   scan-frontend:
     docker:
        - image: cimg/node:13.8.0
@@ -122,7 +114,7 @@ jobs:
              npm install
              npm audit fix --force --audit-level=critical
              npm audit --audit-level=critical
-     -notify_on_failure
+    
   scan-backend:
     docker:
        - image: cimg/node:13.8.0
@@ -138,7 +130,7 @@ jobs:
              npm audit fix --force --audit-level=critical
              npm audit fix --force --audit-level=critical
              npm audit --audit-level=critical
-      -notify_on_failure
+    
 #   deploy-infrastructure:
 #     docker:
 #       # Docker image here that supports AWS CLI
@@ -326,12 +318,12 @@ workflows:
           requires: [build-backend]
       - scan-frontend:
           requires: [build-frontend]
-      -notify_on_success:
-          requires:
-          -test-frontend
-          -test-backend
-          -scan-frontend
-          -scan-backend    
+      # -notify_on_success:
+      #     requires:
+      #     -test-frontend
+      #     -test-backend
+      #     -scan-frontend
+      #     -scan-backend    
       # - deploy-infrastructure:
       #     requires: [test-frontend, test-backend, scan-frontend, scan-backend]
       #     filters:
