--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,9 +1,16 @@
 version: 2.1
 
+orbs:
+ slack: circleci/slack@4.9.3
 
 
-
-# commands:
+commands:
+    notify_on_failure:
+      steps:
+        - slack/notify:
+         event: fail
+         channel: cicd_pipeline
+         template: basic_fail_1
 
 #   destroy-environment:
 #     description: Destroy back-end and front-end cloudformation stacks given a workflow ID.
@@ -53,7 +60,7 @@ jobs:
       - save_cache:
           paths: [frontend/node_modules]
           key: frontend-deps
-      
+      - notify_on_failure
 
   build-backend:
     docker:
@@ -71,7 +78,7 @@ jobs:
       - save_cache:
           paths: [backend/node_modules]
           key: backend-deps
-     
+      - notify_on_failure
   test-frontend:
     docker:
       - image: cimg/node:13.8.0
@@ -85,7 +92,7 @@ jobs:
              cd frontend
              npm install
              npm test
-             
+      - notify_on_failure         
   test-backend:
     docker:
       - image: cimg/node:13.8.0
@@ -99,7 +106,7 @@ jobs:
              cd backend
              npm install
              npm test
-      
+      - notify_on_failure  
   scan-frontend:
     docker:
        - image: cimg/node:13.8.0
@@ -114,7 +121,7 @@ jobs:
              npm install
              npm audit fix --force --audit-level=critical
              npm audit --audit-level=critical
-    
+      - notify_on_failure
   scan-backend:
     docker:
        - image: cimg/node:13.8.0
@@ -130,7 +137,7 @@ jobs:
              npm audit fix --force --audit-level=critical
              npm audit fix --force --audit-level=critical
              npm audit --audit-level=critical
-    
+      - notify_on_failure
 #   deploy-infrastructure:
 #     docker:
 #       # Docker image here that supports AWS CLI
@@ -296,14 +303,14 @@ jobs:
 #               # your code here
 #             fi
           
-#  notify_on_success:
-#     docker:
-#      -image: cimg/base:stable
-#    steps:
-#     -slack/notify:
-#       event: pass
-#       channel: cicd_pipeline
-#       template: success_tagged_deployment_1
+ notify_on_success:
+    docker:
+     -image: cimg/base:stable
+   steps:
+    -slack/notify:
+      event: pass
+      channel: cicd_pipeline
+      template: success_tagged_deployment_1
 
 workflows:
   default:
@@ -318,12 +325,12 @@ workflows:
           requires: [build-backend]
       - scan-frontend:
           requires: [build-frontend]
-      # -notify_on_success:
-      #     requires:
-      #     -test-frontend
-      #     -test-backend
-      #     -scan-frontend
-      #     -scan-backend    
+      -notify_on_success:
+          requires:
+          -test-frontend
+          -test-backend
+          -scan-frontend
+          -scan-backend    
       # - deploy-infrastructure:
       #     requires: [test-frontend, test-backend, scan-frontend, scan-backend]
       #     filters:
