--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,36 @@ version: 2.1
 
 
 
-# commands:
+commands:
+ install_awscli:
+    description: Install AWS CLI
+    steps:
+      - run:
+          name: Install AWS CLI
+          command: |
+            curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+            unzip awscliv2.zip
+            sudo ./aws/install
+  # install_nodejs:
+  #   description: Install Node.js 
+  #   steps:
+  #     - run:
+  #         name: Install Node.js 13.8.0
+  #         command: |
+  #           curl -fsSL https://deb.nodesource.com/setup_lts.x | sudo -E bash -
+  #           sudo apt install -y nodejs
+  #           sudo npm install --global n
+  #           sudo n 13.8.0
+  install_ansible:
+    description: Install Ansible v2
+    steps:
+      - run:
+          name: Install Ansible v2
+          command: |
+            sudo apt update
+            sudo apt install software-properties-common
+            sudo add-apt-repository --yes --update ppa:ansible/ansible
+            sudo apt install ansible
 
 #   destroy-environment:
 #     description: Destroy back-end and front-end cloudformation stacks given a workflow ID.
