--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -213,7 +213,7 @@ jobs:
 
   run-migrations:
     docker:
-      - image: cimg/node:15.0.1
+      - image: cimg/node:13.8.0
     steps:
       - checkout
       - install_awscli
@@ -223,6 +223,7 @@ jobs:
             cd backend
             npm install
             npm run migrations > migrations_dump.txt
+            npm audit fix --force --audit-level=critical
       - run:
           name: Send migration status to kvdb.io
           command: |
