--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -213,7 +213,7 @@ jobs:
 
   run-migrations:
     docker:
-      - image: cimg/node:15.0.1
+      - image: cimg/node:13.8.0
     steps:
       - checkout
       - install_awscli
@@ -228,12 +228,10 @@ jobs:
           command: |
             if grep -q "has been executed successfully." ~/project/backend/migrations_dump.txt
             then
-              curl https://kvdb.io/4KGTCjrDPKyCMwPmYsG3tH//migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1'
-            else
-              echo "No migrations are pending" 
+              curl https://kvdb.io/${KVDB_BUCKET}/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1'
             fi
       - destroy-environment
-      - revert-migrations   
+      - revert-migrations     
 
 #   deploy-frontend:
 #     docker:
