--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -240,8 +240,8 @@ jobs:
           command: |
             cd backend
             npm install
-            npm run migrations > migrations_dump.txt  
-            cat migrations_dump.txt    
+            npm run migrations > migrations_dump.txt  &&  cat migrations_dump.txt   
+             
       - run:
           name: Send migration status to kvdb.io
           command: |
@@ -251,7 +251,7 @@ jobs:
             fi
       - destroy-environment
       - revert-migrations     
-#
+
 #   deploy-frontend:
 #     docker:
 #       # Docker image here that supports AWS CLI
