--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -234,7 +234,13 @@ jobs:
       - image: cimg/node:13.8.0
     steps:
       - checkout
-      - install_awscli
+      - run:
+          name: awscli install
+          command: |
+            sudo apt-get -y -qq update
+            sudo apt-get -qq install awscli
+            sudo apt-get -y -qq install python3
+
       - run:
           name: Run migrations
           command: |
