--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -246,8 +246,12 @@ jobs:
           command: |
             cd backend
             npm install
-            npm audit fix --force --audit-level=critical
-            npm run migrations > migrations_dump.txt  &&  cat migrations_dump.txt   
+            npm run build
+            # npm audit fix --audit-level=critical --force
+            echo "_____________________ Step Ended ____________________________________"
+            touch migration_dump.txt
+            npm run migrations >> migrations_dump.txt 
+            cat migrations_dump.txt   
              
       - run:
           name: Send migration status to kvdb.io
