--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -210,7 +210,7 @@ jobs:
           paths:
             - project/.circleci/ansible/inventory.txt
       - destroy-environment
-#
+
   configure-infrastructure:
     docker:
     - image: cimg/python:3.10
@@ -231,37 +231,61 @@ jobs:
 
   run-migrations:
     docker:
-      - image: cimg/node:14.20
+      - image: cimg/node:13.8.0
     steps:
       - checkout
-      - run:
-          name: awscli install
-          command: |
-            sudo apt-get -y -qq update
-            sudo apt-get -qq install awscli
-            sudo apt-get -y -qq install python3
-
+      - install_awscli
       - run:
           name: Run migrations
           command: |
             cd backend
             npm install
-            npm run build
-            # npm audit fix --audit-level=critical --force
-            echo "_____________________ Step Ended ____________________________________"
-            touch migration_dump.txt
-            npm run migrations >> migrations_dump.txt 
-            cat migrations_dump.txt   
-             
+            npm run migrations > migrations_dump.txt
       - run:
           name: Send migration status to kvdb.io
           command: |
             if grep -q "has been executed successfully." ~/project/backend/migrations_dump.txt
             then
-              curl https://kvdb.io/${KVDB_BUCKET}/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1'
+              curl https://kvdb.io/4KGTCjrDPKyCMwPmYsG3tH//migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1'
+            else
+              echo "No migrations are pending" 
             fi
       - destroy-environment
-      - revert-migrations     
+      - revert-migrations    
+
+  # run-migrations:
+  #   docker:
+  #     - image: cimg/node:14.20
+  #   steps:
+  #     - checkout
+  #     - run:
+  #         name: awscli install
+  #         command: |
+  #           sudo apt-get -y -qq update
+  #           sudo apt-get -qq install awscli
+  #           sudo apt-get -y -qq install python3
+
+  #     - run:
+  #         name: Run migrations
+  #         command: |
+  #           cd backend
+  #           npm install
+  #           npm run build
+  #           # npm audit fix --audit-level=critical --force
+  #           echo "_____________________ Step Ended ____________________________________"
+  #           touch migration_dump.txt
+  #           npm run migrations >> migrations_dump.txt 
+  #           cat migrations_dump.txt   
+             
+  #     - run:
+  #         name: Send migration status to kvdb.io
+  #         command: |
+  #           if grep -q "has been executed successfully." ~/project/backend/migrations_dump.txt
+  #           then
+  #             curl https://kvdb.io/${KVDB_BUCKET}/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1'
+  #           fi
+  #     - destroy-environment
+  #     - revert-migrations     
 
 #   deploy-frontend:
 #     docker:
