--- a/backend/.env
+++ b/backend/.env
@@ -5,10 +5,10 @@ TYPEORM_MIGRATIONS_DIR=./src/migrations
 TYPEORM_ENTITIES=./src/modules/domain/**/*.entity.ts
 TYPEORM_MIGRATIONS=./src/migrations/*.ts
 
-# Things you can change if you wish...
-# TYPEORM_HOST=localhost
-# TYPEORM_PORT=5532
-# TYPEORM_USERNAME=postgres
-# TYPEORM_PASSWORD=password
-# TYPEORM_DATABASE=glee
+Things you can change if you wish...
+TYPEORM_HOST=udapeople-db.ctmr4zhjbkbk.us-east-1.rds.amazonaws.com
+TYPEORM_PORT=5432
+TYPEORM_USERNAME=postgres
+TYPEORM_PASSWORD=8D9dwFp9FdF6d6dNxphc
+TYPEORM_DATABASE=glee
 
