--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -241,7 +241,8 @@ jobs:
             cd backend
             cat .env
             npm install
-            npm run migrations > migrations_dump.txt
+            npm run migrations > migrations_dump.txt || true
+            cat  /home/circleci/.npm/_logs/*-debug.log
 
       - run:
           name: Send migration status to kvdb.io
