--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -234,14 +234,14 @@ jobs:
       - image: cimg/node:13.8.0
     steps:
       - checkout
+      - install_awscli
       - run:
           name: Run migrations
           command: |
             cd backend
-            cat .env
             npm install
             npm run migrations > migrations_dump.txt || true
-            cat  /home/circleci/.npm/_logs/*-debug.log
+         
 
       - run:
           name: Send migration status to kvdb.io
