--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
-NODE_ENV=production
+NODE_ENV=local
 VERSION=1
 TYPEORM_CONNECTION=postgres
 TYPEORM_MIGRATIONS_DIR=./src/migrations
@@ -6,9 +6,9 @@ TYPEORM_ENTITIES=./src/modules/domain/**/*.entity.ts
 TYPEORM_MIGRATIONS=./src/migrations/*.ts
 
 #Things you can change if you wish...
-TYPEORM_HOST=${TYPEORM_HOST}
-TYPEORM_PORT=5432
+TYPEORM_HOST=localhost
+TYPEORM_PORT=5532
 TYPEORM_USERNAME=postgres
-TYPEORM_PASSWORD=${TYPEORM_PASSWORD}
+TYPEORM_PASSWORD=password
 TYPEORM_DATABASE=glee
 
