--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -234,14 +234,13 @@ jobs:
       - image: cimg/node:13.8.0
     steps:
       - checkout
-      - install_awscli
       - run:
           name: Run migrations
           command: |
             cd backend
             npm install
-            npm run migrations > migrations_dump.txt || true
-         
+            # npm run migrations > migrations_dump.txt || true
+            npm run migrations
 
       - run:
           name: Send migration status to kvdb.io
